feat(media): 新增键盘快捷键与边缘翻页

--- a/media/reader.css
+++ b/media/reader.css
@@ -166,7 +166,7 @@ input {
 
 .zr-reader--paged .zr-chapter-title {
   margin: 12px var(--zr-padding) 10px var(--zr-padding);
-  margin-top: calc(var(--zr-padding) + 12px);
+  margin-top: calc(var(--zr-padding));
 }
 
 .zr-reader--paged .zr-chapter p {
